--- a/MyApp/templates/base.html
+++ b/MyApp/templates/base.html
@@ -4,16 +4,40 @@
     <meta charset="UTF-8">
     <title>{% block title %} {% endblock %} - BookInMate</title>
     <style>
-        nav a {
-            color: #d64161;
+      body{
+    background: linear-gradient(
+        45deg,
+        rgba(34, 59, 140, 1) 19%,
+        rgba(29, 145, 103, 1) 96%
+    );
+    font-family: 'Times New Roman', Times, serif;
+    color: white;
+    box-sizing:border-box;
+    height: 100%;
+    width:100%;
+    margin:0;
+      }  
+
+      nav {
+          width: 100%;
+        }
+      nav a {
+	    color:white;
             font-size: 20px;
             margin-left: 50px;
             text-decoration: none;
+            padding:15px;
+            display: inline-block;
         }
 	.message {
             padding: 10px;
             margin: 5px;
             background-color: #f3f3f3
+        }
+	 .content {
+	     box-sizing: border-box;
+	     width: 100%;
+	     border-top:1px solid white;
         }
     </style>
 </head>
@@ -26,7 +50,6 @@
 	<a href="{{url_for('find_in_mate')}}">Find InMate</a>
 	<a href="{{url_for('admin')}}">Admin</a>
     </nav>
-    <hr>
     <div class="content">
         {% block content %} {% endblock %}
     </div>
