--- a/MyApp/templates/admin.html
+++ b/MyApp/templates/admin.html
@@ -3,7 +3,7 @@
 {%block content%}
 {%if login%}
 <h1>Dashboard</h1>
-<a href="{{url_for('admin')}}">Logout</a>
+<a id="logout" href="{{url_for('admin')}}">Logout</a>
 <p id="email-status" style="display: none;">Email successfully sent!</p>
 {%if bookings|length() > 0%}
 {%for booking in bookings %}
@@ -47,6 +47,25 @@
 {%endif%}
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <style>
+  .approve-button{
+    background-color: #4caf50;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  .decline-button{
+    background-color: #e61025;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  h1{
+      text-align:center;
+  }
   #login-form-container{
       padding-top:100px;
       display:flex;
@@ -66,7 +85,7 @@
       backdrop-filter: blur( 1px );
       -webkit-backdrop-filter: blur( 1px );
       border-radius: 10px;
-       border: 1px solid rgba( 255, 255, 255, 0.18 );
+      border: 1px solid rgba( 255, 255, 255, 0.18 );
   }
 button {
     background-color: #4caf50;
@@ -92,6 +111,20 @@ button {
  outline-color: white;
  color:white;
  
+}
+#logout:link, #logout:visited {
+  background-color:#304270;
+  color: white;
+  border: 2px solid green;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+#logout:hover, #logout:active {
+  background-color: green;
+  color: white;
 }
  </style>
  <script>
