--- a/MyApp/templates/base.html
+++ b/MyApp/templates/base.html
@@ -20,6 +20,7 @@
 
       nav {
           width: 100%;
+	  background-color:#24663a;
         }
       nav a {
 	    color:white;
@@ -28,11 +29,13 @@
             text-decoration: none;
             padding:15px;
             display: inline-block;
-        }
+      }
+      
 	.message {
             padding: 10px;
             margin: 5px;
-            background-color: #f3f3f3
+	    font-size:20px;
+            background-color: #304270
         }
 	 .content {
 	     box-sizing: border-box;
@@ -46,7 +49,6 @@
         <a href="{{ url_for('index') }}">Home</a>
         <a href="{{url_for('about_us')}}">About</a>
 	<a href="{{url_for('create_a_booking')}}">Create a booking</a>
-	<a href="{{url_for('visiting_process')}}">Visiting Process</a>
 	<a href="{{url_for('find_in_mate')}}">Find InMate</a>
 	<a href="{{url_for('admin')}}">Admin</a>
     </nav>
