--- a/MyApp/templates/index.html
+++ b/MyApp/templates/index.html
@@ -5,7 +5,44 @@
 {%for message in get_flashed_messages()%}
 <h3>{{message}}</h3>
 {%endfor%}
-<p>This is home page for BookInMate</p>
+<div class="home-container">
+    <ul>
+        <li>Visitors can make use of this website to create bookings.</li>
+        <li>Select the desired visitation slot based on availability.</li>
+        <li>Provide necessary personal details and inmate information.</li>
+        <li>Confirmation and reminders are sent to both visitors and facility administrators.</li>
+        <li>Efficient monitoring of visits within sight and earshot of an official.</li>
+    </ul>
+
 <a href="{{url_for('create_a_booking')}}"><button>BookInMate</button></a>
-    
+</div>
+<style>
+  .home-container{
+      width:60%;
+      padding-bottom:10px;
+      display:flex;
+      flex-direction:column;
+      margin: 0 auto;
+      align-items: center;
+      font-size:24px;
+      background: rgba( 217, 86, 86, 0.1 );
+      box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+      backdrop-filter: blur( 1px );
+      -webkit-backdrop-filter: blur( 1px );
+      border-radius: 10px;
+      border: 1px solid rgba( 255, 255, 255, 0.18 );	    
+  }
+  h1{
+      text-align:center;
+  }
+  button {
+    background-color: #4caf50;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+</style>
 {%endblock%}
