--- a/MyApp/templates/admin.html
+++ b/MyApp/templates/admin.html
@@ -6,163 +6,65 @@
 <a id="logout" href="{{url_for('admin')}}">Logout</a>
 <p id="email-status" style="display: none;">Email successfully sent!</p>
 {%if bookings|length() > 0%}
-{%for booking in bookings %}
-<div class='message'>
-  <p>Inmate_id: {{booking['inmate_id']}}</p>
-  <p>timeslot: {{booking['timeslot']}}<p>
-  <p>Visitor ID: {{booking['visitor_id']}}</p>
-  <p>Visitor email: {{booking['email']}}</p>
-    {%if booking['status'] == 'Pending'%}
-  <button class="approve-button" data-email="{{booking['email']}}" data-booking-id="{{ booking['booking_id'] }}">Approve</button>
-  <button class="decline-button" data-email="{{booking['email']}}" data-booking-id="{{booking['booking_id']}}">Decline</button>
-   {%else%}
-  <p>status:{{booking['status']}}</p>
-   {%endif%}
-
-</div>
-{%endfor%}
+<table class="table">
+                <thead>
+                    <tr>
+                        <th>Inmate ID</th>
+                        <th>Timeslot</th>
+                        <th>Visitor ID</th>
+                        <th>Visitor Email</th>
+                        <th>Status</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for booking in bookings %}
+                        <tr>
+                            <td>{{ booking['inmate_id'] }}</td>
+                            <td>{{ booking['timeslot'] }}</td>
+                            <td>{{ booking['visitor_id'] }}</td>
+                            <td>{{ booking['email'] }}</td>
+                            <td>
+                                {% if booking['status'] == 'Pending' %}
+                                    <button class="approve-button" data-email="{{ booking['email'] }}" data-booking-id="{{ booking['booking_id'] }}">Approve</button>
+                                    <button class="decline-button" data-email="{{ booking['email'] }}" data-booking-id="{{ booking['booking_id'] }}">Decline</button>
+                                {% else %}
+                                    {{ booking['status'] }}
+                                {% endif %}
+                            </td>
+                            <td>
+                                <!-- Add any additional actions or buttons here -->
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
 {%endif%}
 {%else%}
-{%for msg in get_flashed_messages()%}
+
+<div class="container mt-3 py-5">
+ 
+<div class=" vh-100 d-sm-flex flex-column p-2 justify-content-sm-center align-items-sm-center">
+  <form class="my-card p-5" method='post'>
+     {%for msg in get_flashed_messages()%}
   <div>{{msg}}</div>
   {%endfor%}
-<div id="login-form-container"> 
-
-  <form id="login-form" method='post'>
-     <label for='password'>Username:</label>
-  <br>
-  <input class="input" type='text' name='username'
+   <div class="mb-3">
+     <label class="form-label" for='password'>Username:</label>
+  <input class="form-control" type='text' name='username'
 	 placeholder='username'
 	 value="{{request.form['username']}}" required></input>
-  <br>
-  <label for='password'>Password:</label>
-  <br>
-  <input class="input" type='text' name='password'
+   </div>
+   <div class="mb-3">
+  <label class="form-label" for='password'>Password:</label>
+  <input class="form-control" type='text' name='password'
 	 placeholder='password'
 	 value="{{request.form['password']}}" required></input>
-  <br>
-  <button type="submit">Login</button>
-</form>
+  </div>
+  <button type="submit" class="btn btn-primary">Login</button>
+  </form>
+  </div>
 </div>
 {%endif%}
-<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<style>
-  .approve-button{
-    background-color: #4caf50;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  .decline-button{
-    background-color: #e61025;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  h1{
-      text-align:center;
-  }
-  #login-form-container{
-      padding-top:100px;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      margin:0 auto;
-  }
-  #login-form{
-      width:50%;
-      padding:20px;
-      box-sizing:border-box;
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      background: rgba( 217, 86, 86, 0.1 );
-      box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-      backdrop-filter: blur( 1px );
-      -webkit-backdrop-filter: blur( 1px );
-      border-radius: 10px;
-      border: 1px solid rgba( 255, 255, 255, 0.18 );
-  }
-button {
-    background-color: #4caf50;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  .input {
- border: 2px solid #e8e8e8;
- padding: 15px;
- margin-bottom: 10px;
- border-radius: 10px;
- background: rgba( 217, 86, 86, 0.1 );
- color:white;
- font-size: small;
- font-weight: bold;
- text-align: center;
-}
-
-.input:focus {
- outline-color: white;
- color:white;
  
-}
-#logout:link, #logout:visited {
-  background-color:#304270;
-  color: white;
-  border: 2px solid green;
-  padding: 10px 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-}
-
-#logout:hover, #logout:active {
-  background-color: green;
-  color: white;
-}
- </style>
- <script>
-  $(document).ready(function () {
-    $(".approve-button, .decline-button").click(function () {
-      var bookingId = $(this).data("booking-id");
-      var newStatus = $(this).hasClass("approve-button") ? "Approved" : "Declined";
-      var email = $(this).data('email');
-
-      // Confirm the action with the user
-      var confirmMessage = "Are you sure you want to " + newStatus.toLowerCase() + " this booking?";
-      if (!confirm(confirmMessage)) {
-        return; // Do nothing if the user cancels the action
-      }
-
-      // Send a PUT request to update the booking status
-      $.ajax({
-        url: "http://127.0.0.1:5001/api/update_booking_status",
-        type: "PUT",
-        contentType: "application/json",
-        data: JSON.stringify({ booking_id: bookingId, new_status: newStatus, email: email }),
-        success: function (response) {
-          console.log(response);
-          
-          // Update the UI without reloading the page
-          $(`.approve-button[data-booking-id='${bookingId}'], .decline-button[data-booking-id='${bookingId}']`).parent().fadeOut();
-          // Optionally display a success message
-          $("#email-status").show().delay(3000).fadeOut(); // Display for 3 seconds and then fade out
-        },
-        error: function (error) {
-          console.error(error);
-          alert("Booking update was not successful");
-        },
-      });
-    });
-  });
-
-
-</script>
-       
 {%endblock%}
