--- a/MyApp/templates/base.html
+++ b/MyApp/templates/base.html
@@ -3,57 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %} {% endblock %} - BookInMate</title>
-    <style>
-      body{
-    background: linear-gradient(
-        45deg,
-        rgba(34, 59, 140, 1) 19%,
-        rgba(29, 145, 103, 1) 96%
-    );
-    font-family: 'Times New Roman', Times, serif;
-    color: white;
-    box-sizing:border-box;
-    height: 100%;
-    width:100%;
-    margin:0;
-      }  
-
-      nav {
-          width: 100%;
-	  background-color:#24663a;
-        }
-      nav a {
-	    color:white;
-            font-size: 20px;
-            margin-left: 50px;
-            text-decoration: none;
-            padding:15px;
-            display: inline-block;
-      }
-      
-	.message {
-            padding: 10px;
-            margin: 5px;
-	    font-size:20px;
-            background-color: #304270
-        }
-	 .content {
-	     box-sizing: border-box;
-	     width: 100%;
-	     border-top:1px solid white;
-        }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/main.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/home.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/about.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/create_booking.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/findinmate.css') }}">
+     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/admin.css') }}">
+    
+    
 </head>
 <body>
-    <nav>
-        <a href="{{ url_for('index') }}">Home</a>
-        <a href="{{url_for('about_us')}}">About</a>
-	<a href="{{url_for('create_a_booking')}}">Create a booking</a>
-	<a href="{{url_for('find_in_mate')}}">Find InMate</a>
-	<a href="{{url_for('admin')}}">Admin</a>
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a href="#" class="navbar-brand">BookInMate</a>
+      <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+	<div class="navbar-nav fs-5">
+      <a href="{{ url_for('index') }}" class="nav-item nav-link active">
+	<i class="bi-house-door"></i>Home
+      </a>
+        <a href="{{url_for('about_us')}}" class="nav-item nav-link active">About</a>
+	<a href="{{url_for('create_a_booking')}}" class="nav-item nav-link active" >Create a booking</a>
+	<a href="{{url_for('find_in_mate')}}" class="nav-item nav-link active">Find InMate</a>
+	
+	</div>
+
+	<div class="navbar-nav ms-auto">
+	  <a href="{{url_for('admin')}}" class="nav-item nav-link active fs-5"><i class="bi-person"></i>Admin
+	</a>
+	</div> 
+	</div>
+	</div>
     </nav>
-    <div class="content">
+    <div>
         {% block content %} {% endblock %}
     </div>
+    <footer class="container-fluid bg-dark text-center text-white py-3">
+        &copy; 2023 Inmate Booking System. All rights reserved.
+    </footer>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="{{url_for('static', filename='scripts/findInMate.js')}}"></script>
 </body>
 </html>
