--- a/MyApp/templates/index.html
+++ b/MyApp/templates/index.html
@@ -1,48 +1,74 @@
 {%extends 'base.html'%}
 {%block title%}Home{%endblock%}
 {%block content%}
-<h1>BookInMate</h1>
 {%for message in get_flashed_messages()%}
-<h3>{{message}}</h3>
+
+<h3 class="text-danger">{{message}}</h3>
+
 {%endfor%}
-<div class="home-container">
-    <ul>
-        <li>Visitors can make use of this website to create bookings.</li>
-        <li>Select the desired visitation slot based on availability.</li>
-        <li>Provide necessary personal details and inmate information.</li>
-        <li>Confirmation and reminders are sent to both visitors and facility administrators.</li>
-        <li>Efficient monitoring of visits within sight and earshot of an official.</li>
-    </ul>
+<div class="container  my-3 p-2">
+   <header>
+        <h1 class="text-center text-white pt-5">Inmate Booking Information</h1>
+    </header>
+<div class="row m-5">
+  <section class="col-md-6">
+    <h3 class="text-white">Booking Officer Responsibilities</h3>
+    <div class="card my-card">
+  <img src="{{url_for('static', filename='images/dashboard.jpg')}}" class="rounded img-fluid" alt="dashboard picture">
+  <div class="card-body">
+    <h5 class="card-title">Dashbord</h5>
+      <p class="card-text">
+          Our dedicated booking officers play a crucial role in managing the inmate booking process. They are responsible for verifying inmate information, conducting searches as necessary, and ensuring a smooth transition into the correctional facility. Our officers are trained to handle various situations professionally.
+      </p>
+  </div>
+  </div>
 
-<a href="{{url_for('create_a_booking')}}"><button>BookInMate</button></a>
+  </section>
+  <section class="col-md-6">
+    <h3 class="text-white">Booking Policies</h3>
+    <div class="card my-card">
+  <img src="{{url_for('static', filename='images/policy.jpg')}}" class="rounded img-fluid" alt="policy picture">
+  <div class="card-body">
+   <h5 class="card-title">Policies</h5>
+      <p class="card-text">
+          It's essential to be familiar with our booking policies to maintain a safe and controlled environment. Policies cover aspects such as personal belongings, prohibited items, and behavior expectations during the booking process. Understanding and adhering to these policies help create a secure environment for everyone involved.
+      </p>
+  </div>
 </div>
-<style>
-  .home-container{
-      width:60%;
-      padding-bottom:10px;
-      display:flex;
-      flex-direction:column;
-      margin: 0 auto;
-      align-items: center;
-      font-size:24px;
-      background: rgba( 217, 86, 86, 0.1 );
-      box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-      backdrop-filter: blur( 1px );
-      -webkit-backdrop-filter: blur( 1px );
-      border-radius: 10px;
-      border: 1px solid rgba( 255, 255, 255, 0.18 );	    
-  }
-  h1{
-      text-align:center;
-  }
-  button {
-    background-color: #4caf50;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
+</section>
 
-</style>
+  
+ </div>   
+<div class="row m-5">
+  <section class="col-md-6">
+
+    <h3 class="text-white">Booking Process</h3>
+    <div class="card my-card">
+      <img src="{{url_for('static', filename='images/Process.jpg')}}" class="rounded img-fluid" alt="Process picture">
+      <div class="card-body">
+	<h5 class="card-title">Process</h5>
+        <p class="card-text">
+            Our inmate booking process is designed to ensure a secure and organized intake procedure. Inmates are brought in, their information is recorded, and they are assigned to appropriate facilities. This process is carried out with the utmost professionalism and attention to detail.
+        </p>
+	</div>
+	</div>
+  </section>
+  <section class="col-md-6">
+    <h3 class="text-white">Booking Facilities</h3>
+    <div class="card my-card ">
+  <img src="{{url_for('static', filename='images/facility.jpg')}}" class="rounded img-fluid" alt="facility picture">
+  <div class="card-body">
+    <h5 class="card-title">Facility</h5>
+      <p class="card-text">
+          Explore our modern and well-equipped booking facilities. We prioritize efficiency and safety in our facilities to streamline the intake process. From designated holding areas to advanced booking systems, our facilities are designed to handle the intake process with precision and care.
+      </p>
+  </div>
+  </div>
+  </section>  
+    
+   
+</div>
+
+</div>
+
 {%endblock%}
