Improving the styling in admin template

--- a/MyApp/templates/admin.html
+++ b/MyApp/templates/admin.html
@@ -42,7 +42,9 @@
                 </tbody>
 </table>
 {%else%}
-<p>No bookings available.</p>
+<div class="container mt-3">
+  <p>No bookings available.</p>
+  </div>
 {%endif%}
 {%else%}
 
