Fixing the styling in index.html

--- a/MyApp/templates/index.html
+++ b/MyApp/templates/index.html
@@ -3,7 +3,7 @@
 {%block content%}
 {%for message in get_flashed_messages()%}
 
-<h3 class="text-danger">{{message}}</h3>
+<h3 class="text-danger m-5 p-5">{{message}}</h3>
 
 {%endfor%}
 <div class="container  my-3 p-2">
