--- a/MyApp/templates/create_a_booking.html
+++ b/MyApp/templates/create_a_booking.html
@@ -1,8 +1,8 @@
 {%extends 'base.html'%}
 {%block title%}create a booking{%endblock%}
 {%block content%}
-<div class="container-fluid my-5">
-  <h1 class="h3 text-center my-card pt-4 mt-4 pb-3">BookInMate</h1>
+<div class="container-fluid my-5 vh-100">
+  <h1 class="h3 text-center  pt-4 mt-4 pb-3">BookInMate</h1>
    {%for msg in get_flashed_messages()%}
   <div>{{msg}}</div>
   {%endfor%}
